# surf_cuda

./: .CMakeLists.txt.swp  .test.sh.swp  CMakeLists.txt  README.md  compile_commands.json  gl_efficiency.sh  prof.sh  surf_cuda.exvim  surf_cuda.kdev4
.exvim.surf_cuda/: files.exproject  update-filelist.sh  update-idutils.sh  update-inherits.sh  update-symbols.sh  update-tags.sh
.exvim.surf_cuda/view/: ~=+git=+surf_cuda=+.exvim.surf_cuda=+files.exproject=
.kdev4/: surf_cuda.kdev4
data/: limg_pts.pgm
include/surf_cuda/: DoH_filter.cuh  DoH_filter.h  camera.h  common.h  cuda_mat.h  cuda_util.cuh  keypoints.h  octave.h  surf.h  util.h
src/: CMakeLists.txt  DoH_filter.cu  cuda_mat.cu  octave.cu  surf.cu
test/: CMakeLists.txt  cv_load.cu  main.cu  test_DoH.cu  test_cuda_mat.cu  test_integral.cu  test_octave.cu  test_region_conv.cu  test_texture.cpp
