add_executable(main main.cu)
set_property(TARGET main PROPERTY CUDA_STANDARD 11)
add_executable(cv_load cv_load.cu)
set_property(TARGET cv_load PROPERTY CUDA_STANDARD 11)
target_link_libraries(cv_load ${OpenCV_LIBRARIES})
add_executable(test_cuda_mat test_cuda_mat.cu)
set_property(TARGET test_cuda_mat PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_cuda_mat surf_cuda)
add_executable(test_integral test_integral.cu)
set_property(TARGET test_integral PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_integral surf_cuda)