#add_executable(main main.cu)
#set_property(TARGET main PROPERTY CUDA_STANDARD 11)
#add_executable(cv_load cv_load.cu)
#set_property(TARGET cv_load PROPERTY CUDA_STANDARD 11)
#target_link_libraries(cv_load ${OpenCV_LIBRARIES})
add_executable(test_cuda_mat test_cuda_mat.cu)
set_property(TARGET test_cuda_mat PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_cuda_mat surf_cuda)
add_executable(test_integral test_integral.cu)
set_property(TARGET test_integral PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_integral surf_cuda)
#add_executable(test_region_conv test_region_conv.cu)
#set_property(TARGET test_region_conv PROPERTY CUDA_STANDARD 11)
#target_link_libraries(test_region_conv surf_cuda)
add_executable(test_DoH test_DoH.cu)
set_property(TARGET test_DoH PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_DoH surf_cuda)
add_executable(test_octave test_octave.cu)
set_property(TARGET test_octave PROPERTY CUDA_STANDARD 11)
target_link_libraries(test_octave surf_cuda)
